src/WarpCore/impute.h

enum class PCL_IMPUTE_METHOD : int32_t {
	TPS_GRIDSEL = 0
};
enum PCL_IMPUTE_FLAGS {
	PCL_IMPUTE_NEGATE_MASK = 1
};
enum class TRANSFORM_KIND : int32_t {
	TPS = 0,
	LSTPS = 1
};
enum TRANSFORM_FLAGS {
};